--- a/update.css
+++ b/update.css
@@ -157,7 +157,7 @@ body table { font-size: 11px; line-height: 16px; border: 0; background: 0; }
 
 /* Kommentare */
 
-	#comments { background: #F9F9F9; padding: 5px; margin: 0; }
+	#comments { background: #f9f9f9; padding: 5px; margin: 0; }
 	#comments .box { padding: 0; margin: 0; }
 	#comments h2 { margin-top: 0; }	
 	.preview { border-color: #404040; color: #404040; }
