--- a/custom.css
+++ b/custom.css
@@ -800,12 +800,12 @@ padding-left: 1.5em;
 color: #ccc;
 border-top: 1px solid #ccc;
 clear: both;
+padding-bottom: 50px;
 }
 
 
 .node .linkliste {
    display: inline;
-
  }
  
  .node .byline {
