--- a/update.css
+++ b/update.css
@@ -33,7 +33,7 @@ body {
 	h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover { color: #404040 !important; } /*changed to no hover effect*/
 	
 	/* Page Title */
-	#page-tools .page-title, #page .node-title { height: auto !important; font-size: 18px; text-transform: uppercase; font-weight: bold;}
+	#page-tools .page-title, #page .node-title { height: auto !important; font-size: 18px; text-transform: uppercase; font-weight: bold; line-height: 21.6px}
 
 
 /* Abstaende */
@@ -307,7 +307,10 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
 
 /* Content */
 #content { border: none !important; padding: 15px 0 !important; }
-
+#content p {
+    font-size: 11px;
+    line-height: 16.5px;
+}
 /* Vermischtes */
 #main-squeeze p.long { color: #404040; width: auto; top: auto; }
 #views_slideshow_singleframe_main_1 { margin-bottom: 20px; }
