--- a/update.css
+++ b/update.css
@@ -152,7 +152,7 @@ body table { font-size: 11px; line-height: 16px; border: 0; background: 0; }
 	.node { margin-bottom: 40px !important; }
 	.node .content { padding: 0 0 10px 0 !important; }
 	.node-more-link { margin-bottom: 10px; }
-	.addthis_button_div { margin: 0 !important; }
+	.addthis_button_div { margin: 0 !important; display: inline;}
 	.node .links { margin: -20px 0 10px 0; border: none !important; font-size: 10px; width: 430px; float: left; }
 
 /* Kommentare */
