--- a/update.css
+++ b/update.css
@@ -43,7 +43,7 @@ dl dt { font-weight: bold; }
 dl dd { margin-left: 0; }
 
 /* Fliesstext */
-body.front .node .content p { display: block; }
+body.front .node .content p { display: block !important; }
 
 /* Header */
 	#pageInner { background: url(img/bg/header.jpg) 0px 26px repeat-x;  }
@@ -134,7 +134,7 @@ body table { font-size: 11px; line-height: 16px; border: 0; background: 0; }
 	.page-region .block h2, .page-region .block .block-title { /*font-size: 13px !important;*/ }
 		
 	.page-region .block h2, .block .view-header, .page-region .block .block-title { background: none !important; border: none !important; /* border-bottom: #ccc 1px solid !important; no border anymore*/}
-	.page-region .block h2, .block .view-header, .page-region .block .block-title , .page-region .block h2 a, .block .view-header a, .page-region .block .block h2 a { color: #404040 !important; font-size: 14px !important; padding: 0 0 3px 0 !important; }
+	.page-region .block h2, .block .view-header, .page-region .block .block-title , .page-region .block h2 a, .block .view-header a, .page-region .block .block h2 a { color: #404040 !important; font-size: 18px !important; padding: 0 0 3px 0 !important; }
 	
 	.page-region .block h3 { font-size: 13px; }
 	
@@ -152,7 +152,7 @@ body table { font-size: 11px; line-height: 16px; border: 0; background: 0; }
 	.node { margin-bottom: 40px !important; }
 	.node .content { padding: 0 0 10px 0 !important; }
 	.node-more-link { margin-bottom: 10px; }
-	.addthis_button_div { margin: 0 !important; display: inline;}
+	.addthis_button_div { margin: 0 !important; display: inline !important;}
 	.node .links { margin: -20px 0 10px 0; border: none !important; font-size: 10px; width: 430px; float: left; }
 
 /* Kommentare */
