--- a/custom.css
+++ b/custom.css
@@ -789,7 +789,10 @@ width: 30px;
 }
 
 .node-private .node-title {
-padding-left: 1.5em;
+  /*padding-left: 1.5em;
+  Einrueckung fuer Titel der Blogposts.
+  */
+  
 }
 
 .node .content {
