--- a/update.css
+++ b/update.css
@@ -261,6 +261,8 @@ body.node-type-balancewiki div.links.wiki { top: inherit !important; }
 
 /*.node .links { float: none !important; } Removed to make line on equal height as share button */ 
 .node .links .links, .node .links li { float: none !important; display: inline !important; } 
+.node .field-item odd .imagecache { display: none; /*remove user-pic from .links*/ }
+
 
 /* Suche */
 .search-results dt a { color: #404040; font-size: 1.2em; }	
