2nd try headlines, wrong selectors

--- a/custom.css
+++ b/custom.css
@@ -114,21 +114,6 @@ list-style-type: none;
 margin-left: 1em;
 }
 
-.page-region .block .block-title {
-    font-size: 14px;
-    line-height: 16.8px;
-  
-    -moz-border-bottom-colors: none !important;
-    -moz-border-image: none !important;
-    -moz-border-left-colors: none !important;
-    -moz-border-right-colors: none !important;
-    -moz-border-top-colors: none !important;
-    background: none repeat scroll 0 0 transparent !important;
-    border-color: -moz-use-text-color -moz-use-text-color #CCCCCC !important;
-    border-style: none none solid !important;
-    border-width: medium medium 1px !important;
-}
-
 
 #block-focus_groups-0  h2 {
 background-color: transparent;
@@ -1941,6 +1926,11 @@ table th {
 #page-tools .context-links { padding: 0; } 
 .context-links ul { margin-bottom: 0; }
 
+#right .page-region .block .block-title {
+  border-bottom: 1px solid #CCC !important;
+} 
+
+
 /****************************************/
 /* Node Reference */
 
@@ -2028,3 +2018,5 @@ html.js input.form-autocomplete {
   background-repeat: no-repeat;
  /*background-position: 100% 2px;*/
 }
+
+
