--- a/custom.css
+++ b/custom.css
@@ -1785,7 +1785,6 @@ margin-left: 0.4em;
 
 #space-tools .block-title:hover, #block-atrium-account .block-title:hover {
 	text-decoration: underline !important;
-  margin-bottom: 5px;
 }
 
 body #space-tools .block-title, body #header .block-widget .block-content, body #header .block .block-title{
@@ -1929,6 +1928,8 @@ table th {
 
 #right .page-region .block .block-title {
   border-bottom: 1px solid #CCC !important;
+  font-size: 14px;
+  margin-bottom: 8px;
 } 
 
 
