--- a/custom.css
+++ b/custom.css
@@ -1928,10 +1928,13 @@ table th {
 
 #right .page-region .block .block-title {
   border-bottom: 1px solid #CCC !important;
-  font-size: 14px;
   margin-bottom: 8px;
 } 
 
+
+#right .page-region h2 {
+  font-size: 14px;
+} 
 
 /****************************************/
 /* Node Reference */
