Refs #98 Removed the white color background

--- a/custom.css
+++ b/custom.css
@@ -1137,7 +1137,7 @@ font-weight: normal;
 }
 
 #block-footermap-0 li  a {
-/*color: #fff !important;*/
+color: #fff !important;
 font-weight: bold;
 }
 
