--- a/custom.css
+++ b/custom.css
@@ -2021,14 +2021,15 @@ div.litecal .litecal-data .views-field.title {
   color:#404040; /*old 48A */ 
 }
 
-h3.litecal  { 
-   color: #404040 !important;
-   font-size: 14px !important;
-   padding: 0 0 3px 0 !important;
+ #right .page-region .litecal-title .clear-block { 
    border-bottom: 1px solid #CCC !important;
    margin-bottom: 8px;
 }
 
+#right .page-region h3.litecal { 
+   color: #404040 !important;
+   font-size: 14px !important;
+}
 
 
 html.js input.form-autocomplete {
