modified the body to include forschunglankarte and changed css to apply correctly

--- a/custom.css
+++ b/custom.css
@@ -1432,60 +1432,60 @@ clear: both;
 }
 
 /* Forschungslandkarte */
-body.node-1802 .content {
+body.forschungslandkarte .content {
 padding-bottom: 0 !important;
 z-index: 0;
 }
 
-body.node-1802 #sidebar-right {
+body.forschungslandkarte #right {
 display: none;
 }
 
-body.node-1802 #node-1802 {
+body.forschungslandkarte #Forschungslandkarte {
 margin-bottom: 0 !important;
 }
 
-body.node-1802 .exhibit-mapView-map {
+body.forschungslandkarte .exhibit-mapView-map {
 top: -44px;
 width: 750px;
 height: 550px;
 }
 
-body.node-1802 .exhibit-views-header {
+body.forschungslandkarte .exhibit-views-header {
 position: relative; 
 left: 420px; 
 top: -54px;
 }
 
-body.node-1802 .exhibit-cloudFacet-body {
+body.forschungslandkarte .exhibit-cloudFacet-body {
 display: block; 
 width: 900px;
 }
 
-body.node-1802 #map-type-facet {
+body.forschungslandkarte #map-type-facet {
 height: 70px;
 margin-top: 10px;
 }
 
-body.node-1802 #map-image-facet {
+body.forschungslandkarte #map-image-facet {
 height: 287px;
    position: relative;
     top: -4px;
 }
 
-body.node-1802 span.exhibit-flowingFacet-value-count {
+body.forschungslandkarte span.exhibit-flowingFacet-value-count {
     float: right;
     position: relative;
     top: -16px;
 }
 
-body.node-1802 .exhibit-flowingFacet-value-link p {
+body.forschungslandkarte .exhibit-flowingFacet-value-link p {
 margin-bottom: 0 !important;
 }
 
-body.node-1802 .messages,
-body.node-1802 #balance-node-edit,
-body.node-1802 .tabs {
+body.forschungslandkarte .messages,
+body.forschungslandkarte #balance-node-edit,
+body.forschungslandkarte .tabs {
 display: none;
 }
 
