--- a/demoscreen_oa/demoscreen.css
+++ b/demoscreen_oa/demoscreen.css
@@ -26,10 +26,14 @@
 
 .sponsoren #demoscreen {
 	width: 136px;
-	background-position: -628px 0;
+	background-position: -525px 0;
 }
 .sponsoren #rwthaachen {
 	width: 157px;
-	background-position: -800px 0;
+	background-position: -694px 0;
+}
+.sponsoren #imazlwifu {
+	width: 157px;
+	background-position: -865px 0;
 }
 
