final changes to margin for footer leiste

--- a/custom.css
+++ b/custom.css
@@ -1072,7 +1072,7 @@ background-color: #ffaa00 !important;
 .sponsoren li {
 	float: left;
 	height: 80px;
-	margin: 0;
+	margin: 0px -10px 0px 0px;
 	padding: 0;
 }
 
