footer background set from white to grey refs #140

--- a/custom.css
+++ b/custom.css
@@ -1059,7 +1059,7 @@ background-color: #ffaa00 !important;
 
 /**** Logoleiste ***/
 #block-boxes-foerderleiste {
-	background-color: #E5E5E5;
+	background-color: #ffffff;
 }
 
 .sponsoren {
