--- a/custom.css
+++ b/custom.css
@@ -2025,6 +2025,17 @@ div.litecal .litecal-data .views-field.title {
   color:#404040; /*old 48A */ 
 }
 
+div.litecal .litecal-title { 
+  line-height: 18px;
+  font-size: 14px !important;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 8px;
+}
+
+div.litecal .litecal-title h3.litecal-title{ 
+   border: none;
+}
+
 
 html.js input.form-autocomplete {
   background-image: url(/misc/throbber.gif);
