og.description set to 13px fontsize refs #122

--- a/custom.css
+++ b/custom.css
@@ -343,8 +343,9 @@ color: #666;
 /****************************/
 
 .og-context #page-tools .page-title, .og-context #page-tools .og-description {
- width: 700px;
- float: left;
+    width: 700px;
+    float: left;
+    font-size: 13px;
  }
 
 .og-context #page-tools .group-logo {
