removed resp. decresed margin-bottom of .node and .node.links refs #124

--- a/custom.css
+++ b/custom.css
@@ -801,10 +801,10 @@ width: 30px;
 }
 
 .node .links {
-color: #ccc;
-border-top: 1px solid #ccc;
-clear: both;
-padding-bottom: 50px;
+    color: #ccc;
+    border-top: 1px solid #ccc;
+    clear: both;
+    padding-bottom: 10px; /* 50px before */
 }
 
 
