--- a/update.css
+++ b/update.css
@@ -319,6 +319,19 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
     font-size: 13.2px;
     line-height: 19.8px;
 }
+
+div.content ul {
+    list-style: square outside none;
+}
+
+div.content ol {
+   list-style: decimal;
+}
+
+div.content li {
+  margin-left: 30px;
+}
+
 /* Vermischtes */
 #main-squeeze p.long { color: #404040; width: auto; top: auto; }
 #views_slideshow_singleframe_main_1 { margin-bottom: 20px; }
