changed logo and put in logic to switch logos

--- a/demoscreen_oa/demoscreen.css
+++ b/demoscreen_oa/demoscreen.css
@@ -10,6 +10,11 @@
 }
 
 #navigation a.logo {
+  background-image: url("images/sprite_skin_fsp.png") !important;
+  width: 120px;
+}
+
+body.demoscreen_book #navigation a.logo {
   background-image: url("images/sprite_skin.png") !important;
   width: 120px;
 }
