Removed grey background for table

--- a/update.css
+++ b/update.css
@@ -297,7 +297,7 @@ body.node-type-balancewiki div.links.wiki { top: inherit !important; }
 thead th { background: #e5e5e5; border-bottom: #404040 1px solid; }
 .node .content tbody tr th, .node .content tbody tr td { padding: 4px 8px !important;  }
 tbody td { border: none; }
-tr.even, tr.odd { background: #F9F9F9; }
+tr.even, tr.odd { /*background: #F9F9F9;*/ }
 
 /* Announcement */
 #announcement .block { background-color: #F9F9F9; border-color: #404040; }
