--- a/custom.css
+++ b/custom.css
@@ -2066,4 +2066,6 @@ html.js input.form-autocomplete {
  /*background-position: 100% 2px;*/
 }
 
-
+div.pager .minipager .clear-block {
+  border-style: none;
+}
