--- a/update.css
+++ b/update.css
@@ -34,6 +34,12 @@ input, select, textarea, body {
 	.node a:hover, #sidebar-right .block a:hover { color: #404040 !important; }
 	
 	/* Headlines */
+	h1 { font-size: 18px; }
+    h2 { font-size: 18px; }
+    h3 { font-size: 16px; }
+    h4 { font-size: 14px; }
+    h5 { font-size: 12px; }
+    h6 { font-size: 11px; }
 	h1, h2, h3, h4, h5, h6 { margin-bottom: 0.6em; }
 	h4,h5,h6 { margin-top: 1em; margin-bottom: 0.4em; }
 	body #project-sidebar .block h2, body .block .view-header, body #project-sidebar .block h2 a { background: none !important; }
