--- a/update.css
+++ b/update.css
@@ -157,6 +157,7 @@ body table { font-size: 11px; line-height: 16px; border: 0; background: 0; }
 		
 	.page-region .block h2, .block .view-header, .page-region .block .block-title, .exhibit-facet-header, .exhibit-flowingFacet-header { background: none !important; border: none !important;  border-bottom: 1px solid #ccc !important; }
 	.page-region .block h2, .block .view-header, .page-region .block .block-title , .page-region .block h2 a, .block .view-header a, .page-region .block .block h2 a, .exhibit-facet-header-title, .exhibit-flowingFacet-header-title { color: #404040 !important;  font-size: 14px !important; padding: 0 0 3px 0 !important; }
+	.page-region .block-content h2, .block-content .view-header, .page-region .block-content .block-title { border-bottom: 0; }
 	
 	.page-region .block h3 { font-size: 13px; }
 	
