formatted views grid style, added padding bottom and removed background on hover

--- a/custom.css
+++ b/custom.css
@@ -1310,6 +1310,11 @@ background-color: #eee !important
 
 table.views-view-grid td {
 padding: 0;
+padding-bottom: 10px;
+}
+
+table.views-view-grid tr:hover td {
+  background-color: transparent;
 }
 
 /*** Wiki ***/
