--- a/custom.css
+++ b/custom.css
@@ -1313,7 +1313,7 @@ padding: 0;
 padding-bottom: 10px;
 }
 
-table.views-view-grid tr:hover td {
+table.views-view-grid tr:hover td, .views-table tr:hover {
   background-color: transparent;
 }
 
@@ -1738,7 +1738,7 @@ background: #404040 !important;
   height:60px;
   background-image: url('images/sprite_skin.png');
   background-repeat:no-repeat;
-  background-position:100% -420px;
+  background-position: 80% -420px;
   }
 
 #global .notice {
