changed active color of main menu elements

--- a/demoscreen_oa/demoscreen.css
+++ b/demoscreen_oa/demoscreen.css
@@ -28,7 +28,7 @@ body.demoscreen_book #navigation a.logo {
 }
 
 ul#nice-menu-1 li a.active, ul#main-menu li a.active {
-  color: #ff00ff;
+  color: #E2007A;
 }
 
 /* FOOTER */
