--- a/demoscreen_oa/demoscreen.css
+++ b/demoscreen_oa/demoscreen.css
@@ -49,4 +49,7 @@ ul#nice-menu-1 li a.active, ul#main-menu li a.active {
 	background-position: -865px 0;
 }
 
+.og-context #page-tools .page-title {
+  text-transform: capitalize;
+}
 
