used lighter color for sticky border

--- a/update.css
+++ b/update.css
@@ -315,7 +315,7 @@ tr.even, tr.odd { /*background: #F9F9F9;*/ }
 
 /* Announcement */
 #announcement .block { background-color: #F9F9F9; border-color: #404040; }
-.node.sticky { border: 1px solid #404040 !important; background-color: #f9f9f9 !important; padding: 1em; }
+.node.sticky { border: 1px solid #ccc !important; background-color: #f9f9f9 !important; padding: 1em; }
 
 /* Forms */ 
 input, select { padding: 2px; border: none !important; }
