--- a/custom.css
+++ b/custom.css
@@ -895,7 +895,7 @@ padding-bottom: 0;
 display: inline;
 }
 
-body.front .node h2 {
+body.front .node h2, .view-blog-listing h2.node-title {
 	margin-top: 0;
 	display: block;
 	float: none;
