--- a/update.css
+++ b/update.css
@@ -49,7 +49,7 @@ input, select, textarea, body {
 	
 	/* Page Title */
 	#page-tools .page-title, #page .node-title, #context-block-region-content .node-title { height: auto !important; font-size: 18px; text-transform: uppercase; font-weight: bold; line-height: 21.6px}
-
+  .view-content h2.node-title { font-size: 14px; }
 
 /* Abstaende */
 p { margin-bottom: 1em; }
