--- a/custom.css
+++ b/custom.css
@@ -901,6 +901,12 @@ body.front .node h2, .view-blog-listing h2.node-title {
 	float: none;
 }
 
+.view-blog-listing ol, .view-blog-listing ul, .view-blog-listing li {
+ margin-left: 0;
+ padding-left: 0;
+ list-style: none;
+}
+
 body.front #main {
 width: 541px;
 }
