--- a/custom.css
+++ b/custom.css
@@ -902,9 +902,10 @@ body.front .node h2, .view-blog-listing h2.node-title {
 }
 
 .view-blog-listing ol, .view-blog-listing ul, .view-blog-listing li {
- margin-left: 0;
+ margin-left: 0 !important;
  padding-left: 0;
  list-style: none;
+ border: 0;
 }
 
 body.front #main {
