--- a/custom.css
+++ b/custom.css
@@ -901,7 +901,7 @@ body.front .node h2, .view-blog-listing h2.node-title {
 	float: none;
 }
 
-div.content .view-blog-listing ol, div.content .view-blog-listing ul, .page-region .block .view-blog-listing .item-list  li {
+div.content .view-blog-listing ol, div.content .view-blog-listing ul, .view-blog-listing li, .view-frontpage-listing li {
  margin-left: 0 !important;
  padding-left: 0;
  list-style: none;
